--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.5",
+    "emailjs-com": "^3.2.0",
     "jwt-decode": "^3.1.2",
+    "nodemailer": "^6.9.15",
+    "nodemon": "^3.1.7",
     "react": "^18.2.0",
     "react-countup": "^6.4.1",
     "react-dom": "^18.2.0",
