--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "healthbooker",
+  "name": "therapy",
   "version": "2.0.0",
   "description": "Doctor appointment website",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "author": "Avinash905",
+  "author": "VedantRaut1",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
